@@ -53,10 +53,8 @@ safety_time    = auto       # Temporal zone around which templates are isolated 
 max_elts       = 10000      # Max number of events per electrode (should be compatible with nb_elts)
 nb_elts        = 0.8        # Fraction of max_elts that should be obtained per electrode [0-1]
 nclus_min      = 0.002      # Min number of elements in a cluster (given in percentage) [0-1]
-max_clusters   = 10         # Maximal number of clusters for every electrodes
 nb_repeats     = 3          # Number of passes used for the clustering
 smart_search   = True       # Activate the smart search mode
-smart_select   = False      # Experimental: activate the smart selection of centroids (max_clusters is ignored)
 sim_same_elec  = 3          # Distance within clusters under which they are re-merged
 cc_merge       = 0.975      # If CC between two templates is higher, they are merged
 dispersion     = (5, 5)     # Min and Max dispersion allowed for amplitudes [in MAD]
