@@ -46,13 +46,11 @@ class CircusParser(object):
                           ['whitening', 'chunk_size', 'int', '30'],
                           ['whitening', 'safety_space', 'bool', 'True'],
                           ['filtering', 'remove_median', 'bool', 'False'],
-                          ['clustering', 'max_clusters', 'int', '10'],
                           ['clustering', 'nb_repeats', 'int', '3'],
                           ['clustering', 'make_plots', 'string', 'png'],
                           ['clustering', 'test_clusters', 'bool', 'False'],
                           ['clustering', 'sim_same_elec', 'float', '2'],
                           ['clustering', 'smart_search', 'bool', 'True'],
-                          ['clustering', 'smart_select', 'bool', 'False'],
                           ['clustering', 'safety_space', 'bool', 'True'],
                           ['clustering', 'compress', 'bool', 'True'],
                           ['clustering', 'noise_thr', 'float', '0.8'],
